--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,37 @@ header {
   margin-right: 8px;
 }
 
+#dimmedLayer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  display: none;
+  opacity: 0;
+}
+
+#menuLayer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 400px;
+  background-color: white;
+  transform: translateX(-100%);
+  transition: inherit;
+}
+
+#menuFooter {
+  width: 400px;
+  height: 200px;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+}
+
 header img {
   position: absolute;
   top: 0;
